versioned_docs/version-1.21.x/wiki/recipe-printer.mdx
---
description: Converts recipes and item groups into nice looking images
---

# Recipe Printer

import ProjectHeader from '@site/src/components/ProjectHeader';
import ToggleImage from "@site/src/components/ToggleImage";

<ProjectHeader slug="recipe-printer" mcVersion="1.21" />

This mod is for client use only and is not intended for modpacks. Do not attempt to join a server with this mod
installed. It is primarily designed for content creators who want to showcase recipes or creative tabs.

---

## Recipe Printing
This feature allows you to print recipes as PNG images. To do this, use the following command:
- `/recipeprinter recipe morevanillatools:emerald_pickaxe`

![Example Recipe](/img/projects/recipe-printer/example_recipe.png)

You can also print the recipe of the currently held item using this command:
- `/recipeprinter hand`

:::tip
If [JEI](https://modrinth.com/mod/jei) is present, you can use one of these commands instead:
- `/recipeprinter fromJei morevanillatools:emerald_pickaxe`
- `/recipeprinter hand fromJei`

This allows you to use recipe types that are not implemented by the mod itself but are integrated with JEI.
:::

To create all recipes by `morevanillatools`, you can use the following command:
- `/recipeprinter recipe morevanillatools:*`

:::tip
To generate the recipe for the recipe in your hand, just use `/recipeprinter hand` or `/recipeprinter hand fromJei` if
[JEI](https://modrinth.com/mod/jei) is present.
:::

## Creative Tabs
You can also print creative tabs. To do this, use the following command:
- `/recipeprinter itemgroup "Tools & Utilities"`

<ToggleImage src="/img/projects/recipe-printer/1.21/example_tab.png" />

## Output Path
### Normal Recipes
`<pack instance>/recipeprinter/recipes/<mod id>/<recipe id>.png`

### JEI Recipes
`<pack instance>/recipeprinter/jei/<mod id>/<recipe type>/<recipe id>.png`

### Creative Tabs
`<pack instance>/recipeprinter/item_groups/<tab name>.png`
